--- a/src/main/webapp/views/FileBrowser/FileBrowser.xhtml
+++ b/src/main/webapp/views/FileBrowser/FileBrowser.xhtml
@@ -49,24 +49,24 @@
 					style="margin:30" />
 				<p:commandButton value="Delete" update="fileBrowser" ajax="true"
 					actionListener="#{fileBrowserBean.deleteActionListener}"
-					icon="ui-icon-check" style="margin:30" />
+					icon="ui-icon-check" style="margin:30">
+					<p:confirm header="Confirmation"
+						message="Are you sure to delete ? (You can revert the action later)"
+						icon="ui-icon-alert" />
+				</p:commandButton>
 				<p:commandButton value="Parent Folder" update="fileBrowser"
 					ajax="true"
 					actionListener="#{fileBrowserBean.parentFolderActionListener}"
 					icon="ui-icon-check" style="margin:30" />
-
 			</f:facet>
 		</p:panel>
 
-		<!-- 		<p:dialog header="Selected Values" modal="true" showEffect="fade" -->
-		<!-- 			hideEffect="fade" widgetVar="dlg"> -->
-		<!-- 			<h:panelGrid columns="2" id="display"> -->
-
-		<!-- 				<h:outputText value="Value:" /> -->
-		<!-- 				<h:outputText id="selectedFile" -->
-		<!-- 					value="#{fileBrowserBean.selectedItem}" /> -->
-		<!-- 			</h:panelGrid> -->
-		<!-- 		</p:dialog> -->
+		<p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
+			<p:commandButton value="Yes" type="button"
+				styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+			<p:commandButton value="No" type="button"
+				styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+		</p:confirmDialog>
 
 	</h:form>
 
