--- a/src/main/webapp/views/FileBrowser/SelectBranch.xhtml
+++ b/src/main/webapp/views/FileBrowser/SelectBranch.xhtml
@@ -12,30 +12,59 @@
 
 <h:body>
 
-<h:form id="form">
- 
-    <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5"
-                 columnClasses="label, column">
- 
- 
-        <h:outputText value="Select A Branch" />
-        <p:selectOneListbox id="branchSelector" value="#{selectBranchBean.selectedBranch}" converter="file" var="f" filter="true" filterMatchMode="contains">
-            <f:selectItems value="#{selectBranchBean.branches}" var="file" itemLabel="#{file.name}" itemValue="#{file}" />
+	<h:form id="form">
+
+		<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5"
+			columnClasses="label, column">
+
+
+			<h:outputText value="Select A Branch" />
+			<p:selectOneListbox id="branchSelector"
+				value="#{selectBranchBean.selectedBranch}" converter="file" var="f"
+				filter="true" filterMatchMode="contains">
+				<f:selectItems value="#{selectBranchBean.branches}" var="file"
+					itemLabel="#{file.name}" itemValue="#{file}" />
 				<p:column>
 					<h:outputText value="#{f.name} " />
 				</p:column>
 
-        </p:selectOneListbox>
- 
-    </h:panelGrid>
- 
-    <p:separator />
- 
-    <p:commandButton id="submitButton" value="Go" ajax="false" action="#{selectBranchBean.select}" />
- 
- 
-</h:form>
-        
+			</p:selectOneListbox>
+
+		</h:panelGrid>
+
+		<p:separator />
+
+		<p:commandButton id="submitButton" value="Go" ajax="false"
+			action="#{selectBranchBean.select}" />
+
+		<p:commandButton value="Merge To" icon="ui-icon-extlink"
+			actionListener="#{selectBranchBean.merge}">
+			<p:ajax event="dialogReturn" listener="#{selectBranchBean.onMergingDestinationChosen}"
+				update="growl" />
+		</p:commandButton>
+
+		<p:commandButton value="Delete" update="branchSelector" ajax="true"
+			actionListener="#{selectBranchBean.deleteActionListener}"
+			icon="ui-icon-check" style="margin:30">
+			<p:confirm header="Confirmation"
+				message="Are you sure to delete this branch ? (You can revert the action later)"
+				icon="ui-icon-alert" />
+		</p:commandButton>
+
+
+
+		<p:growl id="growl" showDetail="true" />
+
+		<p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
+			<p:commandButton value="Yes" type="button"
+				styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+			<p:commandButton value="No" type="button"
+				styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+		</p:confirmDialog>
+
+
+	</h:form>
+
 
 
 </h:body>
