finished: history converter

--- a/src/main/webapp/views/FileBrowser/SelectBranch.xhtml
+++ b/src/main/webapp/views/FileBrowser/SelectBranch.xhtml
@@ -39,7 +39,8 @@
 
 		<p:commandButton value="Merge To" icon="ui-icon-extlink"
 			actionListener="#{selectBranchBean.merge}">
-			<p:ajax event="dialogReturn" listener="#{selectBranchBean.onMergingDestinationChosen}"
+			<p:ajax event="dialogReturn"
+				listener="#{selectBranchBean.onMergingDestinationChosen}"
 				update="growl" />
 		</p:commandButton>
 
