--- a/src/main/webapp/views/FileBrowser/inputFolderName.xhtml
+++ b/src/main/webapp/views/FileBrowser/inputFolderName.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Will be merged to branch</title>
+	<title>Please Input Name</title>
 	<link type="text/css" rel="stylesheet"
 		href="#{request.contextPath}/css/default.css" />
 </h:head>
