--- a/src/main/webapp/views/UserAccount/SignIn.xhtml
+++ b/src/main/webapp/views/UserAccount/SignIn.xhtml
@@ -42,5 +42,12 @@
 
 	</h:form>
 
+	<p:separator />
+	<p:panelGrid columns="2">
+		<f:facet name="header">Server Information (For Demo Purpose)</f:facet>
+		<h:outputLabel value="Server IP: " />
+		<h:outputLabel value="#{displayIpBean.ip}" />
+	</p:panelGrid>
+
 </h:body>
 </html>
