--- a/src/main/webapp/views/FileBrowser/FileSharing.xhtml
+++ b/src/main/webapp/views/FileBrowser/FileSharing.xhtml
@@ -36,7 +36,7 @@
 				<p:commandButton id="downloadLink" value="Download" ajax="false"
 					onclick="PrimeFaces.monitorDownload(start, stop)"
 					disabled="#{!(fileSharingBean.isDownloadable)}"
-					icon="ui-icon-arrowthichk-s">
+					icon="ui-icon-arrowthickstop-1-s">
 					<p:fileDownload value="#{fileSharingBean.fileStream}" />
 				</p:commandButton>
 			</f:facet>
