--- a/src/main/webapp/views/FileBrowser/selectMergeDestination.xhtml
+++ b/src/main/webapp/views/FileBrowser/selectMergeDestination.xhtml
@@ -20,7 +20,7 @@
 			</p:column>
 
 			<p:column headerText="Color">
-				<p:commandButton icon="ui-icon-search"
+				<p:commandButton icon="ui-icon-arrowthickstop-1-e"
 					actionListener="#{mergingDestinationBean.selectBranchFromDialog(branch)}" />
 			</p:column>
 		</p:dataTable>
