--- a/src/main/webapp/views/UserAccount/SignUp.xhtml
+++ b/src/main/webapp/views/UserAccount/SignUp.xhtml
@@ -47,7 +47,7 @@
 			</h:panelGrid>
 
 			<h:commandButton id="register" value="Sign Up"
-				action="#{registerBean.register}" ajax="false" />
+				action="#{registerBean.register}" icon="ui-icon-check" ajax="false" />
 
 
 		</p:panel>
